Bug 510881 - Entering Private Browsing via command line shows tabs from previous session; r=mconnor,bsmedberg